--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>main</title>
-    <meta name="viewport" content="width=device-width,initial scale=1"
+    <meta name="viewport" content="width=device-width,initial scale=1">
   </head>
   <body>
     <header role="banner">
