--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <li>Red-Currants</li>
           <li>Bananas</li>
         </ul>
-        <a href="">
+        <a href=""></a>
       </main>
-      <footer role="contentinfo"?
+      <footer role="contentinfo">
       <p>© Berries</p>
       </footer>
   </body>
