--- a/resources.html
+++ b/resources.html
@@ -30,7 +30,7 @@
       </ul>
       <a href=""></a>
       </main>
-      <footer role="contentinfo"
+      <footer role="contentinfo">
       <p>© Berries</p>
       </footer>
   </body>
