--- a/berries/index.html
+++ b/berries/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Berries</title>
-    <meta name="viewport" content="width=device-width,initial scale=1">
+  <meta name="viewport" content="width=device-width,initial scale=1">
 </head>
 <body>
   <header role="banner">
@@ -27,7 +27,7 @@
     </ul>
   </main>
   <footer role="contentinfo">
-  <p>© Berries</p>
+    s<p>© Berries</p>
   </footer>
 </body>
 </html>
