--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -9,16 +9,16 @@
     <header role="banner">
       <strong>Berries</strong>
       <nav role="navigation">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="berries/index.html">Berries</a></li>
-            <li><a href="../resources.html">Resources</a></li>
-          </ul>
-        </nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="berries/index.html">Berries</a></li>
+        <li><a href="../resources.html">Resources</a></li>
+      </ul>
+    </nav>
     </header>
     <main role="main">
       <h1>Red Currants</h1>
-      <img aria-details="Red Currants" src="images/red-currants.jpg" alt="A bunch of red currants">
+      <img aria-details="Red-Currants" src="images/red-currants.jpg" alt="A bunch of red currants">
       <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
     </main>
     <footer role="contentinfo">
