--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-  <head>
-    <meta charset="utf-8">
-    <title>Red Currants</title>
-    <meta name="viewport" content="width=device-width,initial scale=1">
-  </head>
-  <body>
-    <header role="banner">
-      <strong>Berries</strong>
-      <nav role="navigation">
+<head>
+  <meta charset="utf-8">
+  <title>Red Currants</title>
+  <meta name="viewport" content="width=device-width,initial scale=1">
+</head>
+<body>
+  <header role="banner">
+    <strong>Berries</strong>
+    <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="berries/index.html">Berries</a></li>
         <li><a href="../resources.html">Resources</a></li>
       </ul>
     </nav>
-    </header>
-    <main role="main">
-      <h1>Red Currants</h1>
-      <img aria-details="Red-Currants" src="images/red-currants.jpg" alt="A bunch of red currants">
-      <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
-    </main>
-    <footer role="contentinfo">
-      <p>© Berries</p>
-    </footer>
+  </header>
+  <main role="main">
+    <h1>Red Currants</h1>
+    <img aria-details="Red-Currants" src="images/red-currants.jpg" alt="A bunch of red currants">
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+  </main>
+  <footer role="contentinfo">
+    <p>© Berries</p>
+  </footer>
 </body>
 </html>
