--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -18,7 +18,7 @@
   </header>
   <main role="main">
     <h1>Blueberries</h1>
-    <img aria-details="Blueberries" src="images/blueberries.jpg" alt="yummy blueberries">
+    <img aria-details="Blueberries" src="images/blueberries.jpg" alt="yummy blue blueberries">
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   </main>
   <footer role="contentinfo">
