--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </header>
   <main role="main">
     <ul>
-      <li>Blueberries</li>
-      <li>Grapes</li>
-      <li>Red-Currants</li>
-      <li>Bananas</li>
+      <li><a href="blueberries.html">Blueberries</a></li>
+      <li><a href="grapes.html">Grapes</a></li>
+      <li><a href="red-currant.html">Red-Currants</a></li>
+      <li><a href="banana.html">Bananas</a></li>
     </ul>
     <a href=""></a>
   </main>
